<resources>
    <string name="app_name">DiaDiary</string>
    <string name="app_desc">Diabetic Diary (insulin, glucose etc)</string>

    <string name="action_settings">Settings</string>
    <string name="action_date_label">For date</string>
    <string name="action_date_text" translatable="false">dd.mm.yyyy</string>
    <string name="action_database">Database</string>
    <string name="action_db_reinit">Reinit DB</string>
    <string name="action_db_import_prod">Import products</string>
    <string name="action_db_import_data">Import data</string>
    <string name="action_db_export">Export data</string>
    <string name="action_menus">Menus</string>

    <string name="button_insulin_color">Select color</string>

    <string name="insulin_label_insulin">Insulin</string>
    <string name="insulin_label_dose">Dose injection</string>
    <string name="insulin_label_comment">Comment</string>

    <string name="planned_none" translatable="false">None</string>
    <string name="planned_regular">Regular</string>
    <string name="planned_additionals">Additional</string>

    <string name="insulin_desc_name">Insulin name:</string>
    <string name="insulin_desc_firm">Firm:</string>
    <string name="insulin_desc_type">Type:</string>
    <string name="insulin_desc_origin">Origin:</string>
    <string name="insulin_desc_start">Start:</string>
    <string name="insulin_desc_work">Work:</string>
    <string name="insulin_desc_ends">Ends:</string>
    <string name="insulin_desc_label_min">min:</string>
    <string name="insulin_desc_label_max">max:</string>

    <string name="button_update">Update</string>

    <string name="insulin_inject_insu">Insulin:</string>
    <string name="insulin_inject_dose">Dose:</string>
    <string name="insulin_inject_date">Date:</string>
    <string name="insulin_inject_time">Time:</string>

    <string name="insulin_inject_plan">Planned:</string>

    <string name="title_activity_insulin_desc">InsulinDescActivity</string>
    <string name="action_insulins">Insulins</string>
    <string name="action_injections">Injections</string>
    <string name="injection_label">Injections</string>
    <string name="insulin_desc_max">Maximum:</string>

    <string name="label_mode_update">Update</string>
    <string name="label_mode_add">Add</string>
    <string name="label_mode_edit">Edit</string>
    <string name="label_mode_cancel">Cancel</string>
    <string name="label_mode_confirm">Confirm</string>

    <string name="insulin_label">Insulins</string>
    <string name="menu_event_add_inject">Add inject</string>
    <string name="menu_event_add_eating">Add meal</string>
    <string name="menu_event_add_other">Add other</string>
    <string name="menu_event_add_action">Add action</string>
    <string name="menu_event_add_glucose">Add glucose</string>
    <string name="glucose_label_title">Glucose value:</string>
    <string name="glucose_add_label_concentration">Concentration</string>
    <string name="glucose_add_title">Add glucose reading result</string>
    <string name="glucose_add_label_comment">Comment</string>
    <string name="glucose_add_label_measure">mmol/L</string>

    <string name="common_label_time">Time</string>
    <string name="common_label_date">Date</string>
    <string name="common_label_comment">Comment</string>

    <string name="common_label_min">Min</string>
    <string name="common_label_max">Max</string>


    <string name="diary_action_label">Actions list</string>
    <string name="action_graph">Diagram</string>
    <string name="insulin_inject_label_type">Injection type</string>
    <string name="injection_total_label">Total dose:</string>
    <string name="tv_injection_total_value" translatable="false">0</string>
    <string name="dialog_edit">Edit</string>
    <string name="dialog_delete">Delete</string>
    <string name="insulin_inject_unit">unit(s)</string>
    <string name="glucose_add_label_when">When reading</string>
    <string name="glucose_add_label_notes">When notes</string>
    <string name="action_about">About</string>
    <string name="action_date_label_from">From</string>
    <string name="action_date_label_into" translatable="false">-</string>
    <string name="no_filemanager_installed">Not found OI file manager</string>
    <string name="title_activity_database">DatabaseActivity</string>
    <string name="calendar_title">Calendar</string>
    <string name="pressure_label_title">Pressure:</string>
    <string name="pressure_label_unit">mmHg</string>
    <string name="pressure_add_title">Add pressure reading result</string>
    <string name="pressure_add_label_systole">Systole</string>
    <string name="pressure_add_label_diastolic">Diastolic</string>
    <string name="menu_event_add_pressure">Add pressure</string>

    <string name="action_notes">Notes</string>
    <string name="action_comment">Comment:</string>
    <string name="glucoce_label_unit">mmol/L</string>
    <string name="average_glucose_label">Average glucose:</string>
    <string name="tv_average_glucose_value" translatable="false">0.0</string>
    <string name="pressure_add_label_pulse">Pulse</string>
    <string name="pulse_label_unit">bpm</string>
    <string name="config_setting">Settings</string>
    <string name="config_user_profile">User profile</string>
    <string name="activity_settings_title">Settings</string>
    <string name="user_profile_label">User profile</string>
    <string name="user_profile_name">User name</string>
    <string name="user_profile_age">Full years</string>
    <string name="user_profile_sex">Gender</string>
    <string name="user_profile_diab_type">Diabet type</string>
    <string name="user_profile_glucose_measure">Glucose measure</string>
    <string name="user_profile_glucose_range">Preffered range</string>
    <string name="activity_profile_title">Profile</string>
    <string name="action_product_group">Product groups</string>
    <string name="action_product_item">Product items</string>
    <string name="prod_menu_add_title">Adding food menu</string>
    <string name="prod_menu_add_label_group">Select product group</string>
    <string name="action_product_menu_add">Add menu</string>
    <string name="activity_menuadd_title">Add menu</string>
    <string name="menu_add_label_name">Menu name</string>
    <string name="menu_add_label_product">Product</string>
    <string name="menu_add_label_groups">Product group</string>
    <string name="prod_item_add_title">Product add</string>
    <string name="menu_add_label_weight">Weight</string>
    <string name="button_select">Select</string>
    <string name="button_select_all">All</string>
    <string name="dialog_import_title">Import products and groups from ...</string>
    <string name="dialog_import_from_assets">Internal</string>
    <string name="dialog_import_from_file">File</string>
    <string name="menu_add_label_prot">Prot</string>
    <string name="menu_add_label_fats">Fat</string>
    <string name="menu_add_label_carb">Carb</string>
    <string name="menu_add_label_zero" translatable="false">0</string>
    <string name="menu_add_label_gi">GI</string>
    <string name="menu_add_label_xe">BE</string>
    <string name="menu_add_hint_prot">Protheine</string>
    <string name="menu_label">Menu:</string>
    <string name="user_k1_value">K1:</string>
    <string name="insulin_K1_dose">Insulin:</string>
    <string name="common_label_K1">K1</string>
    <string name="user_profile_K1_list">K1 list</string>
    <string name="dialog_add_k1_title">Enter value</string>
    <string name="dialog_add_k1_message">Add K1 value to list</string>
    <string name="dialog_del_k1_title">Remove current K1 from list, are you shure ?</string>
    <string name="user_profile_date_of_birth">Date of birth</string>
    <string name="user_profile_weight">Weight</string>
    <string name="user_profile_growth">Growth</string>
    <string name="activity_products_title">Products</string>
    <string name="dialog_add_weight_title">Enter weight</string>
    <string name="dialog_add_weight_message">Enter weight of product</string>
    <string name="item_product_label">Product</string>
    <string name="item_product_menu">Menu</string>
    <string name="menu_dinner_label">Dinner</string>
    <string name="menu_dinner_select">Select menu</string>
    <string name="config_settings_label">Global params</string>
    <string name="config_global_theme">Theme</string>

    <string name="other_actions_label">Select action from list</string>
    <string name="other_value_label">Indicator value</string>

</resources>
