<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prod_menu_add_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/menu_add_label_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/accent" />

            <EditText
                android:id="@+id/et_menu_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/common_label_comment"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/accent" />

            <EditText
                android:id="@+id/et_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/menu_add_label_product"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/accent" />

        <Button
            android:id="@+id/bt_product_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addProduct"
            android:text="@string/button_select" />
    </LinearLayout>
    <Button
        android:id="@+id/bt_product_sel_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_select_all" />

    <ListView
        android:id="@+id/lv_menu_product_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:entries="@array/dialog_period_list" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignWithParentIfMissing="false"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="confirm"
            android:text="@string/button_add" />

        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancel"
            android:text="@android:string/cancel" />
    </LinearLayout>


</LinearLayout>