<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/other_actions_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tv_label_mode_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/label_mode_add"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/id_common"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_actions_label"
                android:textColor="@color/accent"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sp_actions_additional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/actions_additional_list" />

            <TextView
                android:id="@+id/textView4"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_value_label"
                android:textColor="@color/accent"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_action_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView5"
                        style="@android:style/TextAppearance.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/common_label_time"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_inject_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5sp"
                        android:layout_weight="1"
                        android:inputType="time" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView15"
                        style="@android:style/TextAppearance.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/common_label_date"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_inject_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5sp"
                        android:layout_weight="1"
                        android:inputType="time" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/glucose_add_label_notes"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/accent" />

            <Spinner
                android:id="@+id/sp_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:entries="@array/dialog_notes_list" />


            <TextView
                android:id="@+id/textView6"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insulin_label_comment"
                android:textColor="@color/accent"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_inject_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/ll_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:onClick="selectColor"
                    android:text="@string/button_insulin_color" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="confirm"
            android:text="@string/label_mode_add" />

        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancel"
            android:text="@string/label_mode_cancel" />
    </LinearLayout>


</LinearLayout>